# agent-fort

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.zh-CN.md  buf.gen.yaml
.github/workflows/: build-release-assets.yml  publish-sdk-crates-io.yml
apps/agent-fort-guest-runner/: Cargo.toml
apps/agent-fort-helper/: Cargo.toml
apps/agent-fort-helper/src/: main.rs
apps/agent-fort-microvmd/: Cargo.toml
apps/agent-fort-microvmd/src/: config.rs  main.rs  runtime.rs  server.rs
apps/agent-fortd/: Cargo.toml
apps/agent-fortd/src/: bootstrap.rs  config.rs  helper_client.rs  main.rs  rpc_controller.rs  server.rs
apps/agent-fortd/src/rpc_controller/: authorization.rs  controller_exec.rs  conversion.rs  execution.rs  operation_codec.rs  response.rs  snapshot.rs  tests.rs
apps/bootstrap/: Cargo.toml
apps/bootstrap/src/: command.rs  main.rs  start.rs  state.rs  stop.rs  sync.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs  time.rs
core/src/capability/: command_ir.rs  command_parser.rs  delta.rs  extractor.rs  extractor_registry.rs  matcher.rs  mod.rs  model.rs  rule_engine.rs
core/src/capability/extractor/: helpers.rs  profiles.rs  tests.rs
core/src/operation/: mod.rs  normalized.rs  normalizer.rs
core/src/policy/: capability_decision.rs  capability_evaluator.rs  context_builder.rs  decision_mapper.rs  evaluator.rs  match_filter.rs  mod.rs  rule_sorter.rs
core/src/runtime/: adapter_container.rs  adapter_microvm.rs  adapter_sandbox.rs  backend_selector.rs  compiler.rs  mod.rs
core/src/services/: approval_service.rs  capability_grant_service.rs  mod.rs  session_service.rs  task_execution_service.rs  task_service.rs
domain/approval/: Cargo.toml
domain/approval/src/: errors.rs  lib.rs  model.rs  repository.rs
domain/audit/: Cargo.toml
domain/audit/src/: errors.rs  lib.rs  model.rs  repository.rs
domain/policy/: Cargo.toml
domain/policy/src/: capability.rs  command_rule.rs  lib.rs
domain/session/: Cargo.toml
domain/session/src/: errors.rs  lib.rs  model.rs  repository.rs
domain/task/: Cargo.toml
domain/task/src/: errors.rs  lib.rs  model.rs  repository.rs
examples/agent-tui/: Cargo.toml
examples/agent-tui/command-rules/: 00-base.rules
examples/agent-tui/policies/: agent-tui.yaml  static_policy.yaml
examples/agent-tui/src/: main.rs
infra/audit-sink/: Cargo.toml
infra/linux-microvm/: Cargo.toml
infra/linux-microvm/src/: layout.rs  lib.rs  runtime.rs
infra/linux-sandbox/: Cargo.toml
infra/linux-sandbox/src/: bwrap.rs  cgroup.rs  lib.rs  rlimit.rs  runtime.rs  seccomp.rs
infra/microvm/: Cargo.toml
infra/microvm/src/: control.rs  guest.rs  lib.rs
infra/policy/: Cargo.toml
infra/policy/src/: cel_compiler.rs  command_rule_loader.rs  command_rule_parser.rs  debounce.rs  directory_loader.rs  lib.rs  runtime.rs  shared_runtime.rs  source.rs  static_policy_parser.rs  watcher.rs  yaml_parser.rs
infra/sandbox/: Cargo.toml
infra/sandbox/src/: lib.rs
infra/store/: Cargo.toml
infra/store/src/: db.rs  lib.rs  migrations.rs  repo_approval.rs  repo_approval_tx.rs  repo_audit.rs  repo_capability_grant.rs  repo_capability_grant_tx.rs  repo_session.rs  repo_session_tx.rs  repo_task.rs  repo_task_execution_tx.rs  repo_task_tx.rs  repository_tests.rs  sql_audit.rs  sql_session.rs  worker.rs
proto/agent/fort/v1/: approval.proto  audit.proto  common.proto  daemon.proto  policy.proto  session.proto  task.proto
proto/microvm/v1/: control.proto  guest.proto
protocol/microvm-proto/: Cargo.toml  build.rs
protocol/microvm-proto/src/: codec.rs  generated.rs
protocol/rpc-proto/: Cargo.toml  build.rs
protocol/rpc-proto/src/: codec.rs  generated.rs  lib.rs
protocol/rpc-transport/: Cargo.toml
protocol/rpc-transport/src/: async_codec.rs  client.rs  endpoint.rs  error.rs  frame.rs  lib.rs  macos.rs  server.rs  unix.rs  windows.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: approval.rs  bootstrap.rs  client.rs  error.rs  lib.rs  operation.rs  runtime.rs  session.rs  task.rs
sdk/rust/src/bootstrap/: paths.rs  process.rs  source.rs
tools/xtask/: Cargo.toml
tools/xtask/bwrap/: Dockerfile  build-bwrap.sh
tools/xtask/src/: main.rs
