[package]
name = "af-core"
version = "0.1.0"
edition = "2024"

[dependencies]
af-approval = { path = "../domain/approval" }
af-audit = { path = "../domain/audit" }
af-policy = { path = "../domain/policy" }
af-policy-infra = { path = "../infra/policy" }
af-session = { path = "../domain/session" }
af-task = { path = "../domain/task" }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.1"
