[package]
name = "agent-fortd"
version = "0.1.0"
edition = "2024"

[dependencies]
af-rpc-proto = { path = "../../protocol/rpc-proto" }
af-rpc-transport = { path = "../../protocol/rpc-transport" }
af-sandbox = { path = "../../infra/sandbox" }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
