[package]
name = "agent-fortd"
version = "0.1.0"
edition = "2024"

[dependencies]
af-rpc-proto = { path = "../../protocol/rpc-proto" }
af-rpc-transport = { path = "../../protocol/rpc-transport" }
af-core = { path = "../../core" }
af-audit = { path = "../../domain/audit" }
af-approval = { path = "../../domain/approval" }
af-sandbox = { path = "../../infra/sandbox" }
af-policy-infra = { path = "../../infra/policy" }
af-session = { path = "../../domain/session" }
af-task = { path = "../../domain/task" }
af-store = { path = "../../infra/store" }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
