[package]
name = "af-policy-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
af-policy = { path = "../../domain/policy" }
anyhow = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
shlex = "1.3"
starlark = "0.13.0"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
