[package]
name = "af-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
af-rpc-proto = { version = "0.1.0", path = "../../protocol/rpc-proto" }
af-rpc-transport = { version = "0.1.0", path = "../../protocol/rpc-transport" }
serde = { workspace = true }
serde_json = { workspace = true }
prost-types = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
ureq = { version = "3.2", default-features = false, features = ["rustls"] }
url = "2.5"
wait-timeout = "0.2"
toml = "0.8"
